Make the big arrows always visible. Improve the layer title handling in order to avoid flcikering.
git-svn-id: https://svn.bgdi.admin.ch/mf-chsdi/trunk/chsdi@3477 e100092c-b5e6-494f-8bdf-19c1ff2a4001

--- a/chsdi/public/GeoAdmin.ux/Swipe/css/swipe.css
+++ b/chsdi/public/GeoAdmin.ux/Swipe/css/swipe.css
@@ -11,9 +11,9 @@
 .olControlSwipeLayerView {
     background-color: white;
     height: 16px;
-    width: 250px;
-    margin-top: 15px;
-    margin-left: -260px;
+    width: 220px;
+    margin-top: 20px;
+    margin-left: -230px;
     display: block;
     font-size: 11px;
     font-family: Tahoma;
